# PySTL

./: .pre-commit-config.yaml  .pre-commit-env.yml  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: install-modes-pr.yml  pages-deploy.yaml  pages-pr-preview.yml  pages.yaml  tests.yml
docs/: README.md  _config.yml  api_reference.md  index.md  installation.md  quickstart.md  unified_api.md  unified_api_guide.md
docs/backends/: jax.md  pytorch.md
pystl/: __init__.py  api.py
pystl/jax/: __init__.py  aggregators.py  reference.py  reference_formula.py  semantics.py
pystl/semantics/: __init__.py  agm.py  base.py  classic.py  ctstl.py  cumulative.py  dgmsr.py  registry.py  smooth.py  stljax.py
pystl/torch/: __init__.py  semantics.py
stl/: __init__.py  api.py
stl/dgmsr/: __init__.py  api.py
stl/jax/: __init__.py  semantics.py
stl/semantics/: __init__.py  agm.py  base.py  classic.py  ctstl.py  cumulative.py  dgmsr.py  registry.py  smooth.py  stljax.py  traditional.py
stl/torch/: __init__.py  semantics.py
tests/: test_api.py  test_formula_export.py  test_gmsr.py  test_jax_semantics.py  test_stljax_backend.py  test_torch_semantics.py  test_unified_dgmsr_grad.py
